; ModuleID = '/home/carl/AnghaBench/kphp-kdb/dhcp/extr_dhcp-engine.c_open_server_sockets.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/dhcp/extr_dhcp-engine.c_open_server_sockets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@udp_sfd = common dso_local global i64 0, align 8
@port = common dso_local global i32 0, align 4
@debug_mode = common dso_local global i64 0, align 8
@DEBUG_UDPDUMP = common dso_local global i64 0, align 8
@udp_sfd2 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @open_server_sockets() #0 {
  %1 = load i64, i64* @udp_sfd, align 8
  %2 = icmp slt i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @port, align 4
  %5 = call i64 @open_udp_socket(i32 %4)
  store i64 %5, i64* @udp_sfd, align 8
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i64, i64* @debug_mode, align 8
  %8 = load i64, i64* @DEBUG_UDPDUMP, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %6
  %11 = load i64, i64* @udp_sfd2, align 8
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %10
  %14 = call i64 @open_udp_socket(i32 68)
  store i64 %14, i64* @udp_sfd2, align 8
  br label %15

15:                                               ; preds = %13, %10
  br label %16

16:                                               ; preds = %15, %6
  ret void
}

declare dso_local i64 @open_udp_socket(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
